--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -1179,7 +1179,7 @@ EstimateScreen As screen:
         Y: =80
         ZIndex: =4
 
-        ctnBackgroundMenuDS_3 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuES As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
