--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -177,12 +177,12 @@ EstimateScreen As screen:
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(202, 202, 202, 1)
-                    Height: =Image1_16.Height/4
+                    Height: =imgStep1ES.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
-                    X: =Image1_16.X+Image1_16.Width
+                    X: =imgStep1ES.X+imgStep1ES.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
                         If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
@@ -193,12 +193,12 @@ EstimateScreen As screen:
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(202, 202, 202, 1)
-                    Height: =Image1_16.Height/4
+                    Height: =imgStep1ES.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
-                    X: =Image1_17.X+Image1_17.Width
+                    X: =imgStep2ES.X+imgStep2ES.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
                         If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
@@ -209,12 +209,12 @@ EstimateScreen As screen:
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(202, 202, 202, 1)
-                    Height: =Image1_16.Height/4
+                    Height: =imgStep1ES.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
-                    X: =Image1_18.X+Image1_18.Width
+                    X: =imgStep3ES.X+imgStep3ES.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
                         If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
@@ -225,7 +225,7 @@ EstimateScreen As screen:
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(202, 202, 202, 1)
-                    Height: =Image1_16.Height/4
+                    Height: =imgStep1ES.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
@@ -247,8 +247,8 @@ EstimateScreen As screen:
                     Width: =Parent.Width/5
                     X: |-
                         =//If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/7,Parent.Width/4)
-                        Image1_16.X-Image1_16.Width/3
-                    Y: =Image1_16.Y+Image1_16.Height+20
+                        imgStep1ES.X-imgStep1ES.Width/3
+                    Y: =imgStep1ES.Y+imgStep1ES.Height+20
                     ZIndex: =12
 
                 lblStep2CL_3 As label:
@@ -260,8 +260,8 @@ EstimateScreen As screen:
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                     Text: ="Step 2"
                     Width: =Parent.Width/5
-                    X: =Image1_17.X-Image1_17.Width/3
-                    Y: =Image1_16.Y+Image1_16.Height+20
+                    X: =imgStep2ES.X-imgStep2ES.Width/3
+                    Y: =imgStep1ES.Y+imgStep1ES.Height+20
                     ZIndex: =13
 
                 lblStep3CL_3 As label:
@@ -273,8 +273,8 @@ EstimateScreen As screen:
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                     Text: ="Step 3"
                     Width: =Parent.Width/5
-                    X: =Image1_18.X-Image1_18.Width/3
-                    Y: =Image1_16.Y+Image1_16.Height+20
+                    X: =imgStep3ES.X-imgStep3ES.Width/3
+                    Y: =imgStep1ES.Y+imgStep1ES.Height+20
                     ZIndex: =14
 
                 lblSteo4CL_3 As label:
@@ -287,7 +287,7 @@ EstimateScreen As screen:
                     Text: ="Step 4"
                     Width: =Parent.Width/5
                     X: =imgStep4ES.X-imgStep4ES.Width/3
-                    Y: =Image1_16.Y+Image1_16.Height+20
+                    Y: =imgStep1ES.Y+imgStep1ES.Height+20
                     ZIndex: =15
 
                 lblStep5CL_3 As label:
@@ -300,10 +300,10 @@ EstimateScreen As screen:
                     Text: ="Step 5"
                     Width: =Parent.Width/5
                     X: =imgStep5ES.X-imgStep5ES.Width/3
-                    Y: =Image1_16.Y+Image1_16.Height+20
+                    Y: =imgStep1ES.Y+imgStep1ES.Height+20
                     ZIndex: =16
 
-                Image1_16 As image:
+                imgStep1ES As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =1
                     DisabledBorderColor: =RGBA(202, 202, 202, 1)
@@ -322,7 +322,7 @@ EstimateScreen As screen:
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =20
 
-                Image1_17 As image:
+                imgStep2ES As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =1
                     DisabledBorderColor: =RGBA(202, 202, 202, 1)
@@ -341,7 +341,7 @@ EstimateScreen As screen:
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =21
 
-                Image1_18 As image:
+                imgStep3ES As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =1
                     DisabledBorderColor: =RGBA(202, 202, 202, 1)
