--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -995,7 +995,7 @@ EstimateScreen As screen:
                         Y: =IntxtContactNumberES.Y + IntxtContactNumberES.Height
                         ZIndex: =4
 
-                    StarVisible4 As label:
+                    StarVisibleContactNumber As label:
                         Align: =Align.Center
                         Height: =lblContactES.Height
                         Text: ="*"
