--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -980,7 +980,7 @@ EstimateScreen As screen:
                         Y: =lblContactES.Y + lblContactES.Height + 5
                         ZIndex: =3
 
-                    ErrorMessage4 As label:
+                    ErrorMessageContactNumber As label:
                         AutoHeight: =true
                         Height: =10
                         Live: =Live.Assertive
