--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -930,7 +930,7 @@ EstimateScreen As screen:
                     Y: =7
                     ZIndex: =1
 
-                    Rectangle7_1 As rectangle:
+                    borderCustomerContactES As rectangle:
                         BorderColor: =RGBA(237, 237, 237, 1)
                         Fill: =RGBA(237, 237, 237, 1)
                         Height: =96
