--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -1096,7 +1096,7 @@ EstimateScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =5
 
-                Image3_4 As image:
+                imgSpaceES As image:
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(255, 255, 255, 1)
                     Height: =Parent.Height
