--- a/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
@@ -665,14 +665,14 @@ ImageUploadScreen As screen:
                 Y: =6
                 ZIndex: =2
 
-    grpMenuDS_3 As group:
+    grpMenuIS As group:
         Height: =5
         Width: =5
         X: =40
         Y: =80
         ZIndex: =5
 
-        ctnBackgroundMenuDS_4 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuIS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
@@ -680,11 +680,11 @@ ImageUploadScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
-        "glryMenuBarDS_3 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        "glryMenuBarIS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.08*(CountRows(glryMenuBarDS_3.AllItems)*(glryMenuBarDS_3.TemplateHeight))
+            Height: =1.08*(CountRows(glryMenuBarIS.AllItems)*(glryMenuBarIS.TemplateHeight))
             Items: =Menu
             Layout: =Layout.Vertical
             ShowScrollbar: =false
@@ -696,14 +696,14 @@ ImageUploadScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =4
 
-            ctnMenuDS_3 As groupContainer.manualLayoutContainer:
+            ctnMenuIS As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
                 Width: =Parent.Width/1.02
                 ZIndex: =8
 
-                lblMenuDS_3 As label:
+                lblMenuIS As label:
                     AutoHeight: =true
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =24
@@ -713,12 +713,12 @@ ImageUploadScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
-                    Width: =Parent.Width-iconMenuDS_3.Width-lineIndicatorDS_3.Width
-                    X: =iconMenuDS_3.Width+iconMenuDS_3.X
+                    Width: =Parent.Width-iconMenuIS.Width-lineIndicatorIS.Width
+                    X: =iconMenuIS.Width+iconMenuIS.X
                     Y: =30
                     ZIndex: =1
 
-                iconMenuDS_3 As icon.Add:
+                iconMenuIS As icon.Add:
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
@@ -727,7 +727,7 @@ ImageUploadScreen As screen:
                     Y: =30
                     ZIndex: =3
 
-                btnMensuDS_3 As button:
+                btnMenuIS As button:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =80
                     HoverFill: =
@@ -740,7 +740,7 @@ ImageUploadScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =4
 
-                lineIndicatorDS_3 As rectangle:
+                lineIndicatorIS As rectangle:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     BorderThickness: =5
                     Fill: =RGBA(255, 0, 0, 1)
