--- a/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
@@ -33,7 +33,7 @@ ImageUploadScreen As screen:
             X: =0.00
             ZIndex: =1
 
-            iconBackES_1 As icon.BackArrow:
+            iconBackIS As icon.BackArrow:
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =Parent.Height
                 Icon: =Icon.Hamburger
@@ -72,7 +72,7 @@ ImageUploadScreen As screen:
                     =//21.36
                     If(Parent.Width<500,14,Parent.Width>500,18)
                 Text: =" Technician Lead Generation"
-                Width: =Parent.Width-imgSchindlerLogoES_1.Width-iconBackES_1.Width-btnuserES_1.Width-20
+                Width: =Parent.Width-imgSchindlerLogoES_1.Width-iconBackIS.Width-btnuserES_1.Width-20
                 X: =96.12
                 ZIndex: =6
 
