--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1666,7 +1666,7 @@ LeadSummaryScreen As screen:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
                 FillPortions: =0
-                Height: =Parent.Height-ctnProgressBarCreatLead_4.Height-ctnButtonIS.Height-ctnImageIS.Height
+                Height: =Parent.Height-ctnProgressBarIS.Height-ctnButtonIS.Height-ctnImageIS.Height
                 LayoutAlignItems: =LayoutAlignItems.Center
                 LayoutGap: =10
                 LayoutJustifyContent: =LayoutJustifyContent.Center
