--- a/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
@@ -233,7 +233,7 @@ ImageUploadScreen As screen:
                         If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =11
 
-                lblStep1CL_4 As label:
+                lblStep1IS As label:
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -247,7 +247,7 @@ ImageUploadScreen As screen:
                     Y: =imgStep1IS.Y+imgStep1IS.Height+20
                     ZIndex: =12
 
-                lblStep2CL_4 As label:
+                lblStep2IS As label:
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -259,7 +259,7 @@ ImageUploadScreen As screen:
                     Y: =imgStep1IS.Y+imgStep1IS.Height+20
                     ZIndex: =13
 
-                lblStep3CL_4 As label:
+                lblStep3IS As label:
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -271,7 +271,7 @@ ImageUploadScreen As screen:
                     Y: =imgStep1IS.Y+imgStep1IS.Height+20
                     ZIndex: =14
 
-                lblSteo4CL_4 As label:
+                lblSteo4IS As label:
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -283,7 +283,7 @@ ImageUploadScreen As screen:
                     Y: =imgStep1IS.Y+imgStep1IS.Height+20
                     ZIndex: =15
 
-                lblStep5CL_4 As label:
+                lblStep5IS As label:
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
