--- a/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
@@ -531,7 +531,7 @@ ImageUploadScreen As screen:
                         Y: =500
                         ZIndex: =3
 
-                Label1 As label:
+                lblReminderIS As label:
                     Align: =Align.Center
                     AlignInContainer: =AlignInContainer.Center
                     Color: =RGBA(255, 0, 0, 1)
